--- a/Responsive Web Design/Survey Form/index.html
+++ b/Responsive Web Design/Survey Form/index.html
@@ -8,56 +8,72 @@
     <link rel="stylesheet" href="/style.css">
 </head> 
 <body>
-    <main>
+    <header>
         <h1 id='title'>freeCodeCamp Survey Form</h1>
         <p id='description'>Thank you for taking the time to help us improve the platform</p>
+    </header>
+    <main>
         <form id='survey-form'>
-        <fieldset>
-            <label id="name-label">Name<input id='name' type="text" name="name" placeholder='Enter your name' required /></label>
-            <label id="email-label">Email<input id='email' type="email" name="email" placeholder='Enter your email' required /></label>
-            <label id="number-label">Age(optional)<input id='number' type="number" name="age" placeholder='Age' min="13" max="120"></label>
-            <label>Which option best describes your current role?
-                <select id='dropdown'>
-                    <option value="">Select current role</option>
-                    <option value="1">Student</option>
-                    <option value="2">Full Time Job</option>
-                    <option value="3">Full Time Learner</option>
-                    <option value="4">Prefer Not To Say</option>
-                    <option value="1">Other</option>
-                </select>
-            </label>
-            <label>Would you recommend freeCodeCamp to a friend?
-                <input type="radio" name="recommend" class="inline" value='1' /> Definitely
-                <input type="radio" name="recommend" class="inline" value='2' /> Maybe
-                <input type="radio" name="recommend" class="inline" value='3' /> Not sure
-            </label>
-            <label>What is your favorite feature of freeCodeCamp?
-                <select>
-                    <option value="">Select an option</option>
-                    <option value="1">Challenges</option>
-                    <option value="2">Projects</option>
-                    <option value="3">Community</option>
-                    <option value="4">Open Source</option>
-                </select>
-            </label>
-            <label>What would you like to see improved? (Check all that apply)
-                <input type="checkbox" name="improve" class="inline" value='1' /> Front-end Projects
-                <input type="checkbox" name="improve" class="inline" value='2' /> Back-end Projects
-                <input type="checkbox" name="improve" class="inline" value='3' /> Data Visualization
-                <input type="checkbox" name="improve" class="inline" value='4' /> Challenges
-                <input type="checkbox" name="improve" class="inline" value='5' /> Open Source Community
-                <input type="checkbox" name="improve" class="inline" value='6' /> Gitter help rooms
-                <input type="checkbox" name="improve" class="inline"value='7'  /> Videos
-                <input type="checkbox" name="improve" class="inline" value='8' /> City Meetups
-                <input type="checkbox" name="improve" class="inline" value='9' /> Wiki
-                <input type="checkbox" name="improve" class="inline" value='10' /> Forum
-                <input type="checkbox" name="improve" class="inline" value='11' /> Additional Courses
-            </label>
-            <label>Any comments or suggestions?
-            <textarea name="comments" rows="5" cols="40" placeholder="Enter your comment here..."></textarea>
-            </label>
+            <div class="name">
+                <label id="name-label">Name<input id='name' type="text" name="name" placeholder='Enter your name' required /></label>
+            </div>
+            <div class="email">
+                <label id="email-label">Email<input id='email' type="email" name="email" placeholder='Enter your email' required /></label>
+            </div>
+            <div class="age">
+                <label id="number-label">Age(optional)<input id='number' type="number" name="age" placeholder='Age' min="13" max="120"></label>
+            </div>
+            <div class="options-role">
+                <label>Which option best describes your current role?
+                    <select id='dropdown'>
+                        <option value="">Select current role</option>
+                        <option value="1">Student</option>
+                        <option value="2">Full Time Job</option>
+                        <option value="3">Full Time Learner</option>
+                        <option value="4">Prefer Not To Say</option>
+                        <option value="1">Other</option>
+                    </select>
+                </label>
+            </div>
+            <div class="recommend">
+                <label>Would you recommend freeCodeCamp to a friend?
+                    <label><input type="radio" name="recommend" class="inline" value='1' /> Definitely</label>
+                    <label><input type="radio" name="recommend" class="inline" value='2' /> Maybe</label>
+                    <label><input type="radio" name="recommend" class="inline" value='3' /> Not sure</label>
+                </label>
+            </div>
+            <div class="favorite">
+                <label>What is your favorite feature of freeCodeCamp?
+                    <select>
+                        <option value="">Select an option</option>
+                        <option value="1">Challenges</option>
+                        <option value="2">Projects</option>
+                        <option value="3">Community</option>
+                        <option value="4">Open Source</option>
+                    </select>
+                </label>
+            </div>
+            <div class="improve">
+                <label>What would you like to see improved? (Check all that apply)
+                    <label><input type="checkbox" name="improve" class="inline" value='1' /> Front-end Projects</label>
+                    <label><input type="checkbox" name="improve" class="inline" value='2' /> Back-end Projects</label>
+                    <label><input type="checkbox" name="improve" class="inline" value='3' /> Data Visualization</label>
+                    <label><input type="checkbox" name="improve" class="inline" value='4' /> Challenges</label>
+                    <label><input type="checkbox" name="improve" class="inline" value='5' /> Open Source Community</label>
+                    <label><input type="checkbox" name="improve" class="inline" value='6' /> Gitter help rooms</label>
+                    <label><input type="checkbox" name="improve" class="inline"value='7'  /> Videos</label>
+                    <label><input type="checkbox" name="improve" class="inline" value='8' /> City Meetups</label>
+                    <label><input type="checkbox" name="improve" class="inline" value='9' /> Wiki</label>
+                    <label><input type="checkbox" name="improve" class="inline" value='10' /> Forum</label>
+                    <label><input type="checkbox" name="improve" class="inline" value='11' /> Additional Courses</label>
+                </label>
+            </div>
+            <div class="comment">
+                <label>Any comments or suggestions?
+                    <textarea name="comments" rows="5" cols="40" placeholder="Enter your comment here..."></textarea>
+                </label>
+            </div>
             <input id='submit' type='submit' value='Submit'>
-        </fieldset>
         </form>
     </main>
 </body>
