--- a/Responsive Web Design/Survey Form/index.html
+++ b/Responsive Web Design/Survey Form/index.html
@@ -15,13 +15,13 @@
     <main>
         <form id='survey-form'>
             <div class="name">
-                <label id="name-label">Name<input id='name' type="text" name="name" placeholder='Enter your name' required /></label>
+                <label id="name-label">Name</label><input id='name' type="text" name="name" placeholder='Enter your name' required />
             </div>
             <div class="email">
-                <label id="email-label">Email<input id='email' type="email" name="email" placeholder='Enter your email' required /></label>
+                <label id="email-label">Email</label><input id='email' type="email" name="email" placeholder='Enter your email' required />
             </div>
             <div class="age">
-                <label id="number-label">Age(optional)<input id='number' type="number" name="age" placeholder='Age' min="13" max="120"></label>
+                <label id="number-label">Age (optional)</label><input id='number' type="number" name="age" placeholder='Age' min="13" max="120">
             </div>
             <div class="options-role">
                 <label>Which option best describes your current role?
