--- a/Responsive Web Design/Survey Form/index.html
+++ b/Responsive Web Design/Survey Form/index.html
@@ -26,46 +26,46 @@
             <div class="options-role">
                 <label>Which option best describes your current role?
                     <select id='dropdown'>
-                        <option value="">Select current role</option>
-                        <option value="1">Student</option>
-                        <option value="2">Full Time Job</option>
-                        <option value="3">Full Time Learner</option>
-                        <option value="4">Prefer Not To Say</option>
-                        <option value="1">Other</option>
+                        <option disabled selected>Select current role</option>
+                        <option value="student">Student</option>
+                        <option value="job">Full Time Job</option>
+                        <option value="learner">Full Time Learner</option>
+                        <option value="preferNo">Prefer Not To Say</option>
+                        <option value="other">Other</option>
                     </select>
                 </label>
             </div>
             <div class="recommend">
                 <label>Would you recommend freeCodeCamp to a friend?
-                    <label><input type="radio" name="recommend" class="inline" value='1' /> Definitely</label>
-                    <label><input type="radio" name="recommend" class="inline" value='2' /> Maybe</label>
-                    <label><input type="radio" name="recommend" class="inline" value='3' /> Not sure</label>
+                    <label><input type="radio" name="recommend" class="inline" value='definitely' /> Definitely</label>
+                    <label><input type="radio" name="recommend" class="inline" value='maybe' /> Maybe</label>
+                    <label><input type="radio" name="recommend" class="inline" value='notSure' /> Not sure</label>
                 </label>
             </div>
             <div class="favorite">
                 <label>What is your favorite feature of freeCodeCamp?
                     <select>
-                        <option value="">Select an option</option>
-                        <option value="1">Challenges</option>
-                        <option value="2">Projects</option>
-                        <option value="3">Community</option>
-                        <option value="4">Open Source</option>
+                        <option disabled selected>Select an option</option>
+                        <option value="challenges">Challenges</option>
+                        <option value="projects">Projects</option>
+                        <option value="community">Community</option>
+                        <option value="openSource">Open Source</option>
                     </select>
                 </label>
             </div>
             <div class="improve">
                 <label>What would you like to see improved? (Check all that apply)
-                    <label><input type="checkbox" name="improve" class="inline" value='1' /> Front-end Projects</label>
-                    <label><input type="checkbox" name="improve" class="inline" value='2' /> Back-end Projects</label>
-                    <label><input type="checkbox" name="improve" class="inline" value='3' /> Data Visualization</label>
-                    <label><input type="checkbox" name="improve" class="inline" value='4' /> Challenges</label>
-                    <label><input type="checkbox" name="improve" class="inline" value='5' /> Open Source Community</label>
-                    <label><input type="checkbox" name="improve" class="inline" value='6' /> Gitter help rooms</label>
-                    <label><input type="checkbox" name="improve" class="inline"value='7'  /> Videos</label>
-                    <label><input type="checkbox" name="improve" class="inline" value='8' /> City Meetups</label>
-                    <label><input type="checkbox" name="improve" class="inline" value='9' /> Wiki</label>
-                    <label><input type="checkbox" name="improve" class="inline" value='10' /> Forum</label>
-                    <label><input type="checkbox" name="improve" class="inline" value='11' /> Additional Courses</label>
+                    <label><input type="checkbox" name="improve" class="inline" value='frontEnd' /> Front-end Projects</label>
+                    <label><input type="checkbox" name="improve" class="inline" value='backEnd' /> Back-end Projects</label>
+                    <label><input type="checkbox" name="improve" class="inline" value='dataVisualization' /> Data Visualization</label>
+                    <label><input type="checkbox" name="improve" class="inline" value='challenges' /> Challenges</label>
+                    <label><input type="checkbox" name="improve" class="inline" value='openSourceCommunity' /> Open Source Community</label>
+                    <label><input type="checkbox" name="improve" class="inline" value='gitterHelpRooms' /> Gitter help rooms</label>
+                    <label><input type="checkbox" name="improve" class="inline"value='videos'  /> Videos</label>
+                    <label><input type="checkbox" name="improve" class="inline" value='cityMeetups' /> City Meetups</label>
+                    <label><input type="checkbox" name="improve" class="inline" value='wiki' /> Wiki</label>
+                    <label><input type="checkbox" name="improve" class="inline" value='forum' /> Forum</label>
+                    <label><input type="checkbox" name="improve" class="inline" value='addtionalCourses' /> Additional Courses</label>
                 </label>
             </div>
             <div class="comment">
