Fix textarea and missing id

--- a/Responsive Web Design/Survey Form/index.html
+++ b/Responsive Web Design/Survey Form/index.html
@@ -44,7 +44,7 @@
             </div>
             <div class="favorite">
                 <label>What is your favorite feature of freeCodeCamp?
-                    <select>
+                    <select id="dropdown">
                         <option disabled selected>Select an option</option>
                         <option value="challenges">Challenges</option>
                         <option value="projects">Projects</option>
@@ -70,7 +70,7 @@
             </div>
             <div class="comment">
                 <label>Any comments or suggestions?
-                    <textarea name="comments" rows="5" cols="40" placeholder="Enter your comment here..."></textarea>
+                    <textarea name="comments" rows="4"  placeholder="Enter your comment here..."></textarea>
                 </label>
             </div>
             <input id='submit' type='submit' value='Submit'>
