Fix titles and add lists to section prices

--- a/Responsive Web Design/Product Landing Page/index.html
+++ b/Responsive Web Design/Product Landing Page/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/d5175e8514.js" crossorigin="anonymous"></script>
     <title>Product Landign Page</title>
 </head>
@@ -18,35 +18,35 @@
         </nav>
     </header>
     <main>
-        <section id="form">
+        <section class="form">
+            <h2>Handcrafted, home-made masterpieces</h2>
             <form id="form" action="https://www.freecodecamp.com/email-submit">
-                <label>Handcrafted, home-made masterpieces</label>
                 <input id="email" name="email" type="email" placeholder="Enter your email address"></input>
-                <input id="submit" type="submit" value="Get Started"></input>
+                <input id="submit" type="submit" value="GET STARTED"></input>
             </form>
         </section>
         <section id="features">
             <div class="div-features">
                 <div class="icon">
-                    <i class="fa-solid fa-fire-flame-curved"></i>   
+                    <i class="fa-solid fa-2x fa-fire-flame-curved"></i>   
                 </div>
-                <h3>Premium Materials</h3>
+                <h2>Premium Materials</h2>
                 <p>Our trombones use the shiniest brass which is sourced locally. 
                     This will increase the longevity of your purchase.</p>
             </div>
             <div class="div-features">
                 <div class="icon">
-                    <i class="fa-solid fa-truck"></i>   
+                    <i class="fa-solid fa-2x fa-truck"></i>   
                 </div>
-                <h3>Fast Shipping</h3>
+                <h2>Fast Shipping</h2>
                 <p>We make sure you recieve your trombone as soon as we have finished making it. 
                     We also provide free returns if you are not satisfied.</p>
             </div>
             <div class="div-features">
                 <div class="icon">
-                    <i class="fa-solid fa-battery-full"></i>   
+                    <i class="fa-solid fa-2x fa-battery-full"></i>   
                 </div>
-                <h3>Quality Assurance</h3>
+                <h2>Quality Assurance</h2>
                 <p>For every purchase you make, we will ensure there are no damages or faults and 
                     we will check and test the pitch of your instrument.</p>
             </div>
@@ -56,31 +56,37 @@
         </section>
         <section id="'price">
             <div class="type">
-                <h3>TENOR TROMBONE</h3>
-                <h3>$600</h3>
-                <p>Lorem ipsum.</p>
-                <p>Lorem ipsum.</p>
-                <p>Lorem ipsum dolor.</p>
-                <p>Lorem ipsum</p>
-                <button class="btn">Select</button>
+                <h2>TENOR TROMBONE</h2>
+                <h2>$600</h2>
+                <ul>
+                    <li>Lorem ipsum.</li>
+                    <li>Lorem ipsum.</li>
+                    <li>Lorem ipsum dolor.</li>
+                    <li>Lorem ipsum.</li>
+                </ul>
+                <button class="btn">SELECT</button>
             </div>
             <div class="type">
-                <h3>TENOR TROMBONE</h3>
-                <h3>$600</h3>
-                <p>Lorem ipsum.</p>
-                <p>Lorem ipsum.</p>
-                <p>Lorem ipsum dolor.</p>
-                <p>Lorem ipsum</p>
-                <button class="btn">Select</button>
+                <h2>TENOR TROMBONE</h2>
+                <h2>$600</h2>
+                <ul>
+                    <li>Lorem ipsum.</li>
+                    <li>Lorem ipsum.</li>
+                    <li>Lorem ipsum dolor.</li>
+                    <li>Lorem ipsum.</li>
+                </ul>
+                <button class="btn">SELECT</button>
             </div>
             <div class="type">
-                <h3>VALVE TROMBONE</h3>
-                <h3>$1200</h3>
-                <p>Plays similar to a Trumpet</p>
-                <p>Great for Jazz Bands</p>
-                <p>Lorem ipsum dolor.</p>
-                <p>Lorem ipsum</p>
-                <button class="btn">Select</button>
+                <h2>VALVE TROMBONE</h2>
+                <h2>$1200</h2>
+                <ul>
+                    <li>Plays similar to a Trumpet</li>
+                    <li>Great for Jazz Bands</li>
+                    <li>Lorem ipsum dolor.</li>
+                    <li>Lorem ipsum.</li>
+                </ul>
+                <button class="btn">SELECT</button>
             </div>
         </section>
     </main>
