--- a/Responsive Web Design/Product Landing Page/index.html
+++ b/Responsive Web Design/Product Landing Page/index.html
@@ -9,7 +9,7 @@
     <title>Product Landign Page</title>
 </head>
 <body>
-    <header id="header">
+    <header id="header"> <!-- ======= SECTION HEADER ======= -->
         <img id="header-img" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png" />
         <nav id="nav-bar">
             <a class="nav-link" href="">Features</a>
@@ -18,14 +18,14 @@
         </nav>
     </header>
     <main>
-        <section class="form">
+        <section class="form"> <!-- ======= SECTION FORM ======= -->
             <h2>Handcrafted, home-made masterpieces</h2>
             <form id="form" action="https://www.freecodecamp.com/email-submit">
                 <input id="email" name="email" type="email" placeholder="Enter your email address"></input>
                 <input id="submit" type="submit" value="GET STARTED"></input>
             </form>
         </section>
-        <section id="features">
+        <section id="features"> <!-- ======= SECTION FEATURES ======= -->
             <div class="div-features">
                 <div class="icon">
                     <i class="fa-solid fa-2x fa-fire-flame-curved"></i>   
@@ -51,10 +51,10 @@
                     we will check and test the pitch of your instrument.</p>
             </div>
         </section>
-        <section id="video">
+        <section id="video"> <!-- ======= SECTION VIDEO ======= -->
             <iframe src="https://www.youtube.com/embed/y8Yv4pnO7qc" frameborder="0"></iframe>
         </section>
-        <section id="'price">
+        <section id="'price"> <!-- ======= SECTION PRICES ======= -->
             <div class="type">
                 <h2>TENOR TROMBONE</h2>
                 <h2>$600</h2>
@@ -90,7 +90,7 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer> <!-- ======= SECTION FOOTER ======= -->
         <a href="">Privacy</a>
         <a href="">Terms</a>
         <a href="">Contact</a>
