Fix id name and add classes

--- a/Responsive Web Design/Product Landing Page/index.html
+++ b/Responsive Web Design/Product Landing Page/index.html
@@ -54,9 +54,9 @@
         <section id="video"> <!-- ======= SECTION VIDEO ======= -->
             <iframe src="https://www.youtube.com/embed/y8Yv4pnO7qc" frameborder="0"></iframe>
         </section>
-        <section id="'price"> <!-- ======= SECTION PRICES ======= -->
+        <section id="price"> <!-- ======= SECTION PRICE ======= -->
             <div class="type">
-                <h2>TENOR TROMBONE</h2>
+                <h2 class="type-title">TENOR TROMBONE</h2>
                 <h2>$600</h2>
                 <ul>
                     <li>Lorem ipsum.</li>
@@ -67,7 +67,7 @@
                 <button class="btn">SELECT</button>
             </div>
             <div class="type">
-                <h2>TENOR TROMBONE</h2>
+                <h2 class="type-title">TENOR TROMBONE</h2>
                 <h2>$600</h2>
                 <ul>
                     <li>Lorem ipsum.</li>
@@ -78,7 +78,7 @@
                 <button class="btn">SELECT</button>
             </div>
             <div class="type">
-                <h2>VALVE TROMBONE</h2>
+                <h2 class="type-title">VALVE TROMBONE</h2>
                 <h2>$1200</h2>
                 <ul>
                     <li>Plays similar to a Trumpet</li>
