--- a/Responsive Web Design/Product Landing Page/index.html
+++ b/Responsive Web Design/Product Landing Page/index.html
@@ -12,9 +12,9 @@
     <header id="header"> <!-- ======= SECTION HEADER ======= -->
         <img id="header-img" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png" />
         <nav id="nav-bar">
-            <a class="nav-link" href="">Features</a>
-            <a class="nav-link" href="">How It Works</a>
-            <a class="nav-link" href="">Pricing</a>
+            <a class="nav-link" href="#features">Features</a>
+            <a class="nav-link" href="#video">How It Works</a>
+            <a class="nav-link" href="#price">Pricing</a>
         </nav>
     </header>
     <main>
