--- a/Responsive Web Design/Personal Portfolio Webpage/index.html
+++ b/Responsive Web Design/Personal Portfolio Webpage/index.html
@@ -10,32 +10,56 @@
 </head>
 <body>
     <header>
-        <navbar id="navbar">
-        <a href="#welcome">About</a>
-        <a href="#project">Work</a>
-        <a href="#contact">Contact</a>
+        <navbar id="navbar"> <!-- ========= SECTION NAVBAR ========= -->
+            <a href="#welcome">About</a>
+            <a href="#project">Work</a>
+            <a href="#contact">Contact</a>
         </navbar>
     </header>
     <main>
-        <section id="welcome">
+        <section id="welcome"> <!-- ========= SECTION WELCOME ========= -->
             <h1>Hello! I am Milagros</h1>
             <h3>an aspiring web developer</h3>
         </section>
-        <section id="projects">
-            <div class="project-tile">
-                <a href=""><img src="" ref="">Tribute Page</a>
-            </div>
-            <div class="project-tile">
-                <a href=""><img src="" ref="">Survey Form</a>
-            </div>
-            <div class="project-tile">
-                <a href=""><img src="" ref="">Technical Documentation Page</a>
-            </div>
-            <div class="project-tile">
-                <a href=""><img src="" ref="">Product Lading Page</a>
+        <section id="projects"> <!-- ========= SECTION PROJECTS ========= -->
+            <h2>These are some of my projects</h2>
+            <hr>
+            <div class="projects-grid">
+                <div class="project-tile">
+                    <a href="https://github.com/miluvalverde/freeCodeCamp/tree/main/Responsive%20Web%20Design/Survey%20Form" target="_blank">
+                        <div class="project-image">
+                            <img src="./images/survey_form.PNG" ref="Survey form">
+                        </div>
+                        <p>Survey Form</p> 
+                    </a>
+                </div>
+                <div class="project-tile">
+                    <a href="https://github.com/miluvalverde/freeCodeCamp/tree/main/Responsive%20Web%20Design/Tribute%20Page" target="_blank">
+                        <div class="project-image">
+                            <img src="./images/tribute_page.PNG" ref="Tribute page">
+                        </div>
+                        <p>Tribute page</p> 
+                    </a>
+                </div>
+                <div class="project-tile">
+                    <a href="https://github.com/miluvalverde/freeCodeCamp/tree/main/Responsive%20Web%20Design/Technical%20Documentation%20Page" target="_blank">
+                        <div class="project-image">
+                            <img src="./images/technical_documentation_page.PNG" ref="Technical documentation page">
+                        </div>
+                        <p>Technical Documentation Page</p> 
+                    </a>
+                </div>
+                <div class="project-tile">
+                    <a href="https://github.com/miluvalverde/freeCodeCamp/tree/main/Responsive%20Web%20Design/Product%20Landing%20Page" target="_blank">
+                        <div class="project-image">
+                            <img src="./images/product_landing_page.PNG" ref="Product landing page">
+                        </div>
+                        <p>Product Lading Page</p> 
+                    </a>
+                </div>
             </div>
         </section>
-        <section id="contact">
+        <section id="contact"> <!-- ========= SECTION CONTACT ========= -->
             <h2>Let's work together...</h2>
             <div class="contact">
                 <a id="profile-link" href="" target="_blank">GitHub</a>
